--- a/VitalzApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/VitalzApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    
-    <data class="SplashScreenBinding">
-        <variable
-            name="viewModel"
-            type="com.technoidentity.vitalz.splash_screen.SplashActivityViewModel" />
-    </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@mipmap/vitalz"
@@ -38,11 +31,9 @@
             android:layout_marginBottom="50dp"
             android:backgroundTint="@color/button_Red"
             android:text="@string/get_started"
-            android:onClick="@{viewModel::onGetStarted}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
