--- a/VitalzApp/app/src/main/res/layout/activity_user_selection.xml
+++ b/VitalzApp/app/src/main/res/layout/activity_user_selection.xml
@@ -1,141 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@mipmap/vitalz"
+    tools:context=".user_selection.UserSelectionActivity">
 
-    <data class="UserSelectionBinding">
+    <ImageView
+        android:id="@+id/imageView_vitalz"
+        style="@style/viewSize"
+        android:contentDescription="@string/vitalz_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        app:srcCompat="@drawable/vitalz_icon" />
 
-        <variable
-            name="viewModel"
-            type="com.technoidentity.vitalz.user_selection.UserSelectionViewModel" />
-    </data>
+    <TextView
+        android:id="@+id/tv_select_user"
+        style="@style/viewSize"
+        android:layout_marginTop="30dp"
+        android:text="@string/please_select_user"
+        android:textColor="@color/button_blue"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz" />
 
+    <View
+        android:id="@+id/hospital_layout"
+        style="@style/viewContainer"
+        android:background="@drawable/bg_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_select_user" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/vitalz"
-        tools:context=".user_selection.UserSelectionActivity">
+    <ImageView
+        android:id="@+id/iv_hs_operative"
+        style="@style/viewSize"
+        android:elevation="5dp"
+        android:src="@drawable/ic_hs_operative"
+        app:layout_constraintBottom_toBottomOf="@id/hospital_layout"
+        app:layout_constraintEnd_toEndOf="@id/hospital_layout"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="@id/hospital_layout"
+        app:layout_constraintTop_toTopOf="@id/hospital_layout"
+        app:layout_constraintVertical_bias="0.48000002" />
 
-        <ImageView
-            android:id="@+id/imageView_vitalz"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/vitalz_logo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2"
-            app:srcCompat="@drawable/vitalz_icon" />
+    <TextView
+        android:id="@+id/tv_hospital"
+        style="@style/textView"
+        android:layout_marginTop="@dimen/dp_12"
+        android:text="@string/hospital"
+        app:layout_constraintStart_toEndOf="@id/iv_hs_operative"
+        app:layout_constraintTop_toTopOf="@id/hospital_layout" />
 
-        <TextView
-            android:id="@+id/tv_select_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="@string/please_select_user"
-            android:textColor="@color/button_blue"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz" />
+    <TextView
+        android:id="@+id/tv_operative"
+        style="@style/textView"
+        android:layout_marginBottom="@dimen/dp_16"
+        android:text="@string/operative"
+        app:layout_constraintBottom_toBottomOf="@id/hospital_layout"
+        app:layout_constraintStart_toEndOf="@id/iv_hs_operative" />
 
-        <RelativeLayout
-            android:id="@+id/hospital_layout"
-            android:layout_width="220dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/bg_border"
-            android:gravity="center"
-            android:onClick="@{viewModel::hospitalOperative}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_select_user">
+    <View
+        android:id="@+id/patient_care_layout"
+        style="@style/viewContainer"
+        android:background="@drawable/bg_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hospital_layout" />
 
-            <ImageView
-                android:id="@+id/iv_hs_operative"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/random_images"
-                android:src="@drawable/ic_hs_operative" />
+    <ImageView
+        android:id="@+id/iv_patient"
+        style="@style/viewSize"
+        android:elevation="5dp"
+        android:src="@drawable/ic_patient"
+        app:layout_constraintBottom_toBottomOf="@id/patient_care_layout"
+        app:layout_constraintEnd_toEndOf="@+id/patient_care_layout"
+        app:layout_constraintHorizontal_bias="0.18"
+        app:layout_constraintStart_toStartOf="@+id/patient_care_layout"
+        app:layout_constraintTop_toTopOf="@id/patient_care_layout"
+        app:layout_constraintVertical_bias="0.422" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
-                android:layout_toEndOf="@+id/iv_hs_operative"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
+    <TextView
+        android:id="@+id/tv_patient"
+        style="@style/textView"
+        android:layout_marginTop="@dimen/dp_12"
+        android:text="@string/patient"
+        app:layout_constraintStart_toEndOf="@id/iv_patient"
+        app:layout_constraintTop_toTopOf="@id/patient_care_layout" />
 
-                <TextView
-                    android:id="@+id/tv_hospital"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/hospital"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+    <TextView
+        android:id="@+id/tv_care_taker"
+        style="@style/textView"
+        android:layout_marginBottom="@dimen/dp_16"
+        android:text="@string/care_taker"
+        app:layout_constraintBottom_toBottomOf="@id/patient_care_layout"
+        app:layout_constraintStart_toEndOf="@id/iv_patient" />
 
-                <TextView
-                    android:id="@+id/tv_operative"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/operative"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/patient_care_layout"
-            android:layout_width="220dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/bg_border"
-            android:gravity="center"
-            android:onClick="@{viewModel::patientCareTaker}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hospital_layout">
-
-            <ImageView
-                android:id="@+id/iv_patient"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/random_images"
-                android:src="@drawable/ic_patient" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
-                android:layout_toEndOf="@+id/iv_patient"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_patient"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/patient"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/tv_care_taker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/care_taker"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
