--- a/VitalzApp/app/src/main/res/layout/activity_device.xml
+++ b/VitalzApp/app/src/main/res/layout/activity_device.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,105 +22,117 @@
         app:srcCompat="@drawable/vitalz_icon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/display_text_box"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz">
+      android:layout_width="match_parent"
+      android:layout_height="150dp"
+      android:layout_marginStart="@dimen/dp_32"
+      android:layout_marginTop="@dimen/dp_32"
+      android:layout_marginEnd="@dimen/dp_32"
+      android:background="@drawable/display_text_box"
+      android:orientation="horizontal"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz">
 
         <ImageView
-            android:id="@+id/imageView_battery"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="60dp"
-            android:contentDescription="@string/vitalz_logo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/vitalz_icon" />
+          android:id="@+id/imageView_battery"
+          android:layout_width="80dp"
+          android:layout_height="80dp"
+          android:layout_marginStart="@dimen/dp_50"
+          android:contentDescription="@string/vitalz_logo"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:srcCompat="@drawable/vitalz_icon" />
 
         <TextView
-            android:id="@+id/tx_patch_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="35dp"
-            android:text="@string/patch_id"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imageView_battery"
-            app:layout_constraintTop_toTopOf="parent" />
+          android:id="@+id/tx_patch_id"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/dp_16"
+          android:text="@string/patch_id"
+          android:textAppearance="@style/TextAppearance.AppCompat.Small"
+          android:textColor="@color/black"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toTopOf="@+id/tx_status"
+          app:layout_constraintStart_toEndOf="@+id/imageView_battery"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
-            android:id="@+id/tx_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/status"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imageView_battery"
-            app:layout_constraintTop_toBottomOf="@+id/tx_patch_id" />
+          android:id="@+id/tx_status"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/dp_16"
+          android:layout_marginTop="@dimen/dp_16"
+          android:text="@string/status"
+          android:textAppearance="@style/TextAppearance.AppCompat.Small"
+          android:textColor="@color/black"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toTopOf="@+id/tx_connection"
+          app:layout_constraintStart_toEndOf="@+id/imageView_battery"
+          app:layout_constraintTop_toBottomOf="@+id/tx_patch_id" />
 
         <TextView
-            android:id="@+id/tx_connection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/connection"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imageView_battery"
-            app:layout_constraintTop_toBottomOf="@id/tx_status" />
+          android:id="@+id/tx_connection"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/dp_16"
+          android:layout_marginTop="@dimen/dp_16"
+          android:text="@string/connection"
+          android:textAppearance="@style/TextAppearance.AppCompat.Small"
+          android:textColor="@color/black"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/imageView_battery"
+          app:layout_constraintTop_toBottomOf="@+id/tx_status" />
 
         <TextView
-            android:id="@+id/patch_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="35dp"
-            android:hint="@string/fake_patch_id"
-            android:text=""
-            android:textColor="@color/button_blue"
-            android:textColorHint="@color/button_blue"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/tx_connection"
-            app:layout_constraintTop_toTopOf="parent" />
+          android:id="@+id/patch_id"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/dp_16"
+          android:hint="@string/fake_patch_id"
+          android:text=""
+          app:layout_constraintVertical_chainStyle="packed"
+          android:textAppearance="@style/TextAppearance.AppCompat.Small"
+          android:textColor="@color/button_blue"
+          android:textColorHint="@color/button_blue"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toTopOf="@+id/status"
+          app:layout_constraintStart_toEndOf="@id/tx_connection"
+          app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:hint="@string/fake_status"
-            android:text=""
-            android:textColor="@color/button_blue"
-            android:textColorHint="@color/button_blue"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/tx_connection"
-            app:layout_constraintTop_toBottomOf="@id/patch_id" />
+          android:id="@+id/status"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/dp_16"
+          android:layout_marginTop="@dimen/dp_16"
+          android:hint="@string/fake_status"
+          android:text=""
+          android:textAppearance="@style/TextAppearance.AppCompat.Small"
+          android:textColor="@color/button_blue"
+          android:textColorHint="@color/button_blue"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toTopOf="@+id/connection"
+          app:layout_constraintStart_toEndOf="@id/tx_connection"
+          app:layout_constraintTop_toBottomOf="@+id/patch_id" />
 
         <TextView
-            android:id="@+id/connection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:hint="@string/fake_connection"
-            android:text=""
-            android:textColor="@color/button_blue"
-            android:textColorHint="@color/button_blue"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/tx_connection"
-            app:layout_constraintTop_toBottomOf="@id/status" />
+          android:id="@+id/connection"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/dp_16"
+          android:layout_marginTop="@dimen/dp_16"
+          android:hint="@string/fake_connection"
+          android:text=""
+          android:textAppearance="@style/TextAppearance.AppCompat.Small"
+          android:textColor="@color/button_blue"
+          android:textColorHint="@color/button_blue"
+          android:textStyle="bold"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintStart_toEndOf="@id/tx_connection"
+          app:layout_constraintTop_toBottomOf="@+id/status" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
