--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
     <item name="android:layout_width">@dimen/dp_50</item>
     <item name="android:layout_height">@dimen/dp_50</item>
     <item name ="android:layout_marginTop">@dimen/dp_16</item>
+    <item name ="android:layout_marginStart">@dimen/dp_8</item>
     <item name="android:inputType">number</item>
     <item name="android:padding">@dimen/dp_8</item>
     <item name="android:maxLength">1</item>
