--- a/VitalzApp/app/src/main/res/values/dimens.xml
+++ b/VitalzApp/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_220">220dp</dimen>
+    <dimen name="dp_150">150dp</dimen>
     <dimen name="dp_80">80dp</dimen>
 </resources>
