--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -1,52 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <!-- Base application theme. -->
-  <style name="Theme.VitalzApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-    <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/purple_500</item>
-    <item name="colorPrimaryVariant">@color/purple_700</item>
-    <item name="colorOnPrimary">@color/white</item>
-    <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/teal_200</item>
-    <item name="colorSecondaryVariant">@color/teal_700</item>
-    <item name="colorOnSecondary">@color/black</item>
-    <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-    <!-- Customize your theme here. -->
-  </style>
+    <!-- Base application theme. -->
+    <style name="Theme.VitalzApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+    </style>
 
-  <style name="otp_editText" >
-    android:layout_marginTop="20dp"
-    <item name="android:layout_width">@dimen/dp_50</item>
-    <item name="android:layout_height">@dimen/dp_50</item>
-    <item name ="android:layout_marginTop">@dimen/dp_16</item>
-    <item name ="android:layout_marginStart">@dimen/dp_8</item>
-    <item name="android:inputType">number</item>
-    <item name="android:padding">@dimen/dp_8</item>
-    <item name="android:maxLength">1</item>
-    <item name="android:hint">@string/fake_opt</item>
-    <item name="android:gravity">center</item>
-    <item name="android:background">@drawable/edit_text_box</item>
-    <item name="android:textColor">@color/black</item>
-  </style>
+    <style name="otp_editText">
+        android:layout_marginTop="20dp"
+        <item name="android:layout_width">@dimen/dp_50</item>
+        <item name="android:layout_height">@dimen/dp_50</item>
+        <item name="android:layout_marginTop">@dimen/dp_16</item>
+        <item name="android:layout_marginStart">@dimen/dp_8</item>
+        <item name="android:inputType">number</item>
+        <item name="android:padding">@dimen/dp_8</item>
+        <item name="android:maxLength">1</item>
+        <item name="android:hint">@string/fake_opt</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/edit_text_box</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
-  <style name="button">
-    <item name="android:layout_width">@dimen/dp_240</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:layout_marginTop">@dimen/dp_16</item>
-    <item name="android:padding">@dimen/dp_16</item>
-    <item name="android:backgroundTint">@color/button_blue</item>
-    <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
-  </style>
+    <style name="button">
+        <item name="android:layout_width">@dimen/dp_240</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/dp_16</item>
+        <item name="android:padding">@dimen/dp_16</item>
+        <item name="android:backgroundTint">@color/button_blue</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+    </style>
 
 
-    <style name="viewSize" >
+    <style name="viewSize">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="textView" parent="viewSize" >
-        <item name ="android:textSize">@dimen/sp_18</item>
+    <style name="etRequestOtp">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_50</item>
+        <item name="android:paddingStart">@dimen/dp_8</item>
+        <item name="android:maxLength">10</item>
+        <item name="android:inputType">number</item>
+        <item name="android:background">@drawable/edit_text_box</item>
+        <item name="android:layout_margin">@dimen/dp_32</item>
+    </style>
+
+    <style name="customLayoutDevice">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_150</item>
+        <item name="android:layout_margin">@dimen/dp_32</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
+    </style>
+
+    <style name="textViewDevice">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/dp_16</item>
+    </style>
+
+    <style name="textView" parent="viewSize">
+        <item name="android:textSize">@dimen/sp_18</item>
         <item name="android:layout_marginStart">@dimen/dp_20</item>
         <item name="android:textColor">@color/black</item>
     </style>
