--- a/VitalzApp/app/src/main/res/layout/fragment_caretaker_login.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_caretaker_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/vitalz"
-    tools:context=".request_otp.RequestOtpActivity">
+    tools:context=".user.UserActivity">
 
     <ImageView
         android:id="@+id/imageView_vitalz"
