--- a/VitalzApp/app/src/main/res/values/dimens.xml
+++ b/VitalzApp/app/src/main/res/values/dimens.xml
@@ -14,5 +14,6 @@
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_220">220dp</dimen>
     <dimen name="dp_150">150dp</dimen>
+    <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_80">80dp</dimen>
 </resources>
