--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -20,6 +20,14 @@
         <item name="android:layout_height">@dimen/dp_50</item>
     </style>
 
+    <style name="layout_login">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/dp_16</item>
+        <item name="android:layout_marginTop">@dimen/dp_16</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
     <style name="et_address">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/dp_100</item>
