--- a/VitalzApp/app/src/main/res/layout/sample_register_user.xml
+++ b/VitalzApp/app/src/main/res/layout/sample_register_user.xml
@@ -30,7 +30,6 @@
                 android:id="@+id/iv_vitalz_name"
                 style="@style/backBtn"
                 android:contentDescription="@string/back_btn"
-                android:padding="10dp"
                 android:src="@drawable/ic_vital_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_back_btn"
@@ -49,7 +48,6 @@
         <TextView
             android:id="@+id/tv_time_left"
             style="@style/dashboard_ble"
-            android:gravity="center"
             android:hint="@string/fake_time_left"
             android:text=""
             android:textColorHint="@color/black"
@@ -65,7 +63,7 @@
         <ImageView
             android:id="@+id/iv_connectivity_icon"
             style="@style/dashboard_ble"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="@dimen/dp_20"
             android:contentDescription="@string/remote_icon"
             android:src="@drawable/ic_connectivity_icon"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +86,7 @@
             <TextView
                 android:id="@+id/tv_user_registration"
                 style="@style/viewSize"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="@dimen/dp_16"
                 android:text="@string/user_registration"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/button_blue"
@@ -119,7 +117,7 @@
             <EditText
                 android:id="@+id/et_age"
                 style="@style/heading_dashboard_spinner"
-                android:layout_width="150dp"
+                android:layout_width="@dimen/dp_150"
                 android:text="@={viewModel.age}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_age" />
@@ -127,7 +125,7 @@
             <TextView
                 android:id="@+id/tv_gender"
                 style="@style/heading_dashboard"
-                android:layout_width="150dp"
+                android:layout_width="@dimen/dp_150"
                 android:text="@string/gender"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/et_age"
@@ -136,7 +134,7 @@
             <EditText
                 android:id="@+id/et_gender"
                 style="@style/heading_dashboard_spinner"
-                android:layout_width="150dp"
+                android:layout_width="@dimen/dp_150"
                 android:text="@={viewModel.age}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/et_age"
@@ -152,7 +150,7 @@
             <EditText
                 android:id="@+id/et_height"
                 style="@style/heading_dashboard_spinner"
-                android:layout_width="150dp"
+                android:layout_width="@dimen/dp_150"
                 android:text="@={viewModel.age}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_height" />
@@ -160,7 +158,7 @@
             <TextView
                 android:id="@+id/tv_weight"
                 style="@style/heading_dashboard"
-                android:layout_width="150dp"
+                android:layout_width="@dimen/dp_150"
                 android:text="@string/weight"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/et_age"
@@ -169,7 +167,7 @@
             <EditText
                 android:id="@+id/et_weight"
                 style="@style/heading_dashboard_spinner"
-                android:layout_width="150dp"
+                android:layout_width="@dimen/dp_150"
                 android:text="@={viewModel.age}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/et_age"
