--- a/VitalzApp/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_splash_screen.xml
@@ -6,8 +6,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/vitalz"
-        tools:context=".splash_screen.SplashScreenActivity">
+        android:background="@mipmap/vitalz">
 
         <ImageView
             android:id="@+id/imageView_vitalz"
@@ -20,15 +19,5 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5"
             app:srcCompat="@drawable/vitalz_icon" />
-
-        <Button
-            android:id="@+id/btn_get_started"
-            style="@style/button"
-            android:layout_marginBottom="@dimen/dp_32"
-            android:backgroundTint="@color/button_Red"
-            android:text="@string/get_started"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
